# Advanced24SolverRust

./: .gitignore  README.md  results.json
python/: README.md  main.py  pyproject.toml  results.json  setup.py  solver.pyx
rust/: Cargo.toml  README.md
rust/src/: main.rs
src/: solver.rs
