[project]
name = "advanced24solver"
version = "0.1.0"
description = "Advanced 24-point solver with Cython-accelerated DFS and 8-process parallel execution."
readme = "README.md"
authors = [
    { name = "onika", email = "2193609709@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cython>=3.2.4",
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
]

[build-system]
requires = ["setuptools>=70", "wheel", "Cython>=3.2.4"]
build-backend = "setuptools.build_meta"
